--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers.html
@@ -67,11 +67,14 @@
                                      th:src="@{'/image/edit.svg'}"/>
                             </a>
                             <!-- Change Password -->
-                            <a th:href="@{/customers/delete/{id}(id=${customer.id})}"
-                               class="btn btn-danger">
+                            <button class="btn btn-danger"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#deleteConfirmationModal"
+                                    th:attr="data-url=@{/customers/delete/{id}(id=${customer.id})}"
+                            >
                                 <img class="icon" alt="delete"
                                      th:src="@{'/image/delete.svg'}"/>
-                            </a>
+                            </button>
                         </td>
                     </tr>
                     </tbody>
@@ -81,6 +84,15 @@
         </div>
     </div>
 </div>
+<div th:replace="~{fragment/confirmation_modal :: deleteConfirmationModal}"></div>
 <footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
+<script>
+    const modal = document.getElementById('deleteConfirmationModal');
+    modal.addEventListener('show.bs.modal', function (event) {
+        const button = event.relatedTarget; // the button that triggered the modal
+        const url = button.getAttribute('data-url');
+        document.getElementById('confirmDeleteBtn').setAttribute('href', url);
+    });
+</script>
 </html>
