--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands.html
@@ -55,10 +55,14 @@
                                                                   th:src="@{'/image/edit.svg'}"/>
                                 <!-- Change Password -->
                             </a>
-                            <a th:href="@{/brands/delete/{id}(id=${brand.id})}"
-                               class="btn btn-danger"> <img class="icon" alt="delete"
-                                                            th:src="@{'/image/delete.svg'}"/>
-                            </a>
+                            <button class="btn btn-danger"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#deleteConfirmationModal"
+                                    th:attr="data-url=@{/brands/delete/{id}(id=${brand.id})}"
+                            >
+                                <img class="icon" alt="delete"
+                                     th:src="@{'/image/delete.svg'}"/>
+                            </button>
                         </td>
                     </tr>
                     </tbody>
@@ -68,6 +72,15 @@
         </div>
     </div>
 </div>
+<div th:replace="~{fragment/confirmation_modal :: deleteConfirmationModal}"></div>
  <footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
+<script>
+    const modal = document.getElementById('deleteConfirmationModal');
+    modal.addEventListener('show.bs.modal', function (event) {
+        const button = event.relatedTarget; // the button that triggered the modal
+        const url = button.getAttribute('data-url');
+        document.getElementById('confirmDeleteBtn').setAttribute('href', url);
+    });
+</script>
 </html>
