--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories.html
@@ -67,10 +67,15 @@
                                     class="btn btn-warning"> <img class="icon" alt="edit"
                                                                   th:src="@{'/image/edit.svg'}"/>
 
-                            </a><a th:href="@{/categories/delete/{id}(id=${category.id})}"
-                                   class="btn btn-danger"> <img class="icon" alt="delete"
-                                                                th:src="@{'/image/delete.svg'}"/>
-                        </a>
+                            </a>
+                            <button class="btn btn-danger"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#deleteConfirmationModal"
+                                    th:attr="data-url=@{/categories/delete/{id}(id=${category.id})}"
+                            >
+                                <img class="icon" alt="delete"
+                                     th:src="@{'/image/delete.svg'}"/>
+                            </button>
                         </td>
                     </tr>
                     </tbody>
@@ -80,7 +85,7 @@
         </div>
     </div>
 </div>
-
+<div th:replace="~{fragment/confirmation_modal :: deleteConfirmationModal}"></div>
 <footer th:replace="~{fragment/footer :: footer}"></footer>
 
 <!--Modal-->
@@ -139,6 +144,13 @@
                     modalContent.innerHTML = `<li class="list-group-item text-danger">Failed to load data.</li>`;
                 });
         });
+    });
+
+    const modal = document.getElementById('deleteConfirmationModal');
+    modal.addEventListener('show.bs.modal', function (event) {
+        const button = event.relatedTarget; // the button that triggered the modal
+        const url = button.getAttribute('data-url');
+        document.getElementById('confirmDeleteBtn').setAttribute('href', url);
     });
 </script>
 </html>
