--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -61,10 +61,15 @@
                         </a> <a th:href="@{/users/changePassword/{id}(id=${user.id})}"
                                 class="btn btn-info"> <img class="icon" alt="password"
                                                            th:src="@{'/image/password.svg'}"/> <!-- Delete -->
-                        </a> <a th:href="@{/users/delete/{id}(id=${user.id})}"
-                                class="btn btn-danger"> <img class="icon" alt="delete"
-                                                             th:src="@{'/image/delete.svg'}"/>
                         </a>
+                            <button class="btn btn-danger"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#deleteConfirmationModal"
+                                    th:attr="data-url=@{/users/delete/{id}(id=${user.id})}"
+                            >
+                                <img class="icon" alt="delete"
+                                     th:src="@{'/image/delete.svg'}"/>
+                            </button>
                         </td>
                     </tr>
                     </tbody>
@@ -74,6 +79,15 @@
         </div>
     </div>
 </div>
+<div th:replace="~{fragment/confirmation_modal :: deleteConfirmationModal}"></div>
 <footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
+<script>
+    const modal = document.getElementById('deleteConfirmationModal');
+    modal.addEventListener('show.bs.modal', function (event) {
+        const button = event.relatedTarget; // the button that triggered the modal
+        const url = button.getAttribute('data-url');
+        document.getElementById('confirmDeleteBtn').setAttribute('href', url);
+    });
+</script>
 </html>
