--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/create_address_page.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/create_address_page.html
@@ -15,7 +15,7 @@
                     Update Your Information
                 </h2>
 
-                <input type="hidden" name="id" th:value="${pojo.id}"/>
+                <input type="hidden" name="id" th:value="${pojo.id}" th:unless="${pojo == null}"/>
 
                 <div>
                     <label for="phone">Phone*</label>
@@ -23,6 +23,8 @@
                            class="form-control" name="phone" id="phone"
                            th:field="*{phoneNumber}"
                            min="5" max="20" required/>
+                    <div th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"
+                         class="text-danger"></div>
                 </div>
                 <br/>
                 <div>
@@ -33,6 +35,9 @@
                            id="alternativePhone"
                            th:field="*{alternativePhoneNumber}"
                            min="5" max="20"/>
+                    <div th:if="${#fields.hasErrors('alternativePhoneNumber')}" th:errors="*{alternativePhoneNumber}"
+                         class="text-danger"></div>
+
                 </div>
                 <br/>
                 <div>
@@ -65,6 +70,7 @@
                               required
                     >
                     </textarea>
+                    <div th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="text-danger"></div>
                 </div>
                 <br/>
                 <div>
@@ -75,6 +81,7 @@
                            th:field="*{city}"
                            required
                     />
+                    <div th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="text-danger"></div>
                 </div>
                 <br/>
                 <div>
@@ -85,6 +92,7 @@
                            th:field="*{postalCode}"
                            required
                     />
+                    <div th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}" class="text-danger"></div>
                 </div>
                 <br/>
                 <div>
